refactor chatter to take a view connector with an update method