@@ -1,33 +1,29 @@
 /*
- * This file is part of sChat, licensed under the MIT License.
+ * sChat, a Supercharged Minecraft Chat Plugin
  * Copyright (C) Silthus <https://www.github.com/silthus>
  * Copyright (C) sChat team and contributors
  *
- *  Permission is hereby granted, free of charge, to any person obtaining a copy
- *  of this software and associated documentation files (the "Software"), to deal
- *  in the Software without restriction, including without limitation the rights
- *  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- *  copies of the Software, and to permit persons to whom the Software is
- *  furnished to do so, subject to the following conditions:
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
  *
- *  The above copyright notice and this permission notice shall be included in all
- *  copies or substantial portions of the Software.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
  *
- *  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- *  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- *  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- *  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- *  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- *  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- *  SOFTWARE.
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
 package net.silthus.schat.chatter;
 
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
+import java.util.Queue;
 import java.util.Set;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -37,9 +33,12 @@ import lombok.experimental.Accessors;
 import net.silthus.schat.channel.Channel;
 import net.silthus.schat.identity.Identity;
 import net.silthus.schat.message.Message;
+import net.silthus.schat.view.ViewConnector;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
+
+import static net.silthus.schat.view.ViewConnector.Context.of;
 
 @Getter
 @Setter
@@ -53,17 +52,17 @@ non-sealed class ChatterImpl implements Chatter {
     }
 
     private final Identity identity;
-    private final MessageHandler messageHandler;
+    private final ViewConnector viewConnector;
     private final PermissionHandler permissionHandler;
 
     private final Set<Channel> channels = new HashSet<>();
-    private final Set<Message> messages = new HashSet<>();
+    private final Queue<Message> messages = new LinkedList<>();
 
     private @Nullable Channel activeChannel;
 
     protected ChatterImpl(Builder builder) {
         this.identity = builder.identity();
-        this.messageHandler = builder.messageHandler();
+        this.viewConnector = builder.viewConnector();
         this.permissionHandler = builder.permissionHandler();
     }
 
@@ -113,13 +112,23 @@ non-sealed class ChatterImpl implements Chatter {
 
     @Override
     public @NotNull @Unmodifiable Set<Message> getMessages() {
-        return Collections.unmodifiableSet(messages);
+        return Set.copyOf(messages);
+    }
+
+    @Override
+    public Optional<Message> getLastMessage() {
+        return Optional.ofNullable(messages.peek());
     }
 
     @Override
     public void sendMessage(@NonNull Message message) {
         messages.add(message);
-        messageHandler.handleMessage(message, new MessageHandler.Context(this));
+        updateView();
+    }
+
+    @Override
+    public void updateView() {
+        viewConnector.update(of(this, messages.peek()));
     }
 
     @Getter
@@ -128,7 +137,7 @@ non-sealed class ChatterImpl implements Chatter {
     static final class Builder implements Chatter.Builder {
 
         private final Identity identity;
-        private MessageHandler messageHandler = (message, context) -> {};
+        private ViewConnector viewConnector = context -> {};
         private PermissionHandler permissionHandler = permission -> false;
 
         private Builder(Identity identity) {
@@ -181,6 +190,16 @@ non-sealed class ChatterImpl implements Chatter {
         @Override
         public @NotNull @Unmodifiable Set<Message> getMessages() {
             return Set.of();
+        }
+
+        @Override
+        public Optional<Message> getLastMessage() {
+            return Optional.empty();
+        }
+
+        @Override
+        public void updateView() {
+
         }
 
         @Override
